# gh-class-sak

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
gh_class_sak/: __main__.py  canvas_api.py  core.py  gh_class_sak.py  github_api.py
gh_class_sak/commands/: __init__.py  classrooms.py  repos.py
