[build-system]
requires = ["setuptools>=69", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-class-sak"
version = "0.2.0"
description = "Command-line Swiss Army Knife for GitHub Classrooms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "canvasapi>=3.0",
    "click>=8.1",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/breed/gh-class-sak"
Source = "https://github.com/breed/gh-class-sak"

[tool.setuptools.packages.find]
include = ["gh_class_sak*"]

[project.scripts]
gh-class-sak = "gh_class_sak.gh_class_sak:main"
